# IBAS6111

./: README.md  hello world.cpp  lab04  lab04.cpp  lab05  lab05.cpp  test  test.cpp
1 semester/ laboratory work 0/: lab02.cpp  lab03.cpp
1 semester/ laboratory work 1/: Lab01MakarovNikita.sln  laba1.1.cpp  laba1.10.cpp  laba1.12.cpp  laba1.13.cpp  laba1.2.cpp  laba1.20.cpp  laba1.23.cpp  laba1.25.cpp  laba1.26.cpp  laba1.27.cpp  laba1.28.cpp  laba1.3.cpp  laba1.5  laba1.9.cpp  laba12.cpp  laba120.cpp
1 semester/ laboratory work theory/: двумерные_массивы1.cpp  массивы1.cpp  массивы2.cpp
1 semester/ laboratory work theory/laboratory work 1 theory/: двумерные_массивы1.cpp
1 semester/labarotory work 2/: laba2.1.cpp  laba2.2.cpp  laba2.26.cpp  laba2.27.cpp  laba2.3.cpp
1 semester/laboratory work 3/: laba3.1  laba3.26.cpp  laba3.3.cpp
1 semester/lecture/: continue.cpp  тернарная_условная_операция.cpp
1 semester/practic/: lesson7,2.cpp  lesson7.1
1 semester/practic/practic 1/: practic2.cpp  practic5.cpp
1 semester/practic/practic 2/: practic1.cpp  practic2.cpp  practic3.cpp  practic4.cpp  practic5.cpp  practic6.cpp  (+1 more)
1 semester/workshop on OP/: 1nomer.cpp  2nomer.cpp  3nomer  4nomer.cpp  5nomer.cpp  6nomer.cpp
2 semester/: CMakeLists.txt
kali/: .editorconfig  CMakeLists.txt  lab1.2.cpp
lab05.dSYM/Contents/: Info.plist
laba0/: lab02  lab03
laba1/: laba1.1.cpp  laba1.2.cpp  laba120.cpp  laba13.cpp
practic/: pr  pr.cpp  prac1.cpp  practic  practic1  practic1.cpp  practic2  practic3  practic3.cpp  practic4  practic4.cpp  practic5  practic6.cpp
(+5 files in other folders)
